--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
-    <title>Authenticate Me</title>
+    <script
+      src="https://kit.fontawesome.com/2687a23fd5.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>MythicalBnB</title>
   </head>
   <body>
     <div id="root"></div>
